# zkclear

./: .gitattributes  .gitignore  README.md  design.md  flow.md
api/: flow.md
api/compliance-attestation-adapter/: .env.example  Cargo.toml  flow.md
api/compliance-attestation-adapter/config/: policy_snapshot.json
api/compliance-attestation-adapter/data/: sanctions.json
api/compliance-attestation-adapter/scripts/: refresh_sanctions_data.sh
api/compliance-attestation-adapter/src/: app.rs  main.rs
api/compliance-attestation-adapter/src/config/: db.rs  environment.rs
api/compliance-attestation-adapter/src/infra/: mod.rs  mongo.rs  provider_client.rs  redis.rs
api/compliance-attestation-adapter/src/module/: mod.rs
api/compliance-attestation-adapter/src/module/compliance_attestation/: controller.rs  crud.rs  error.rs  model.rs  route.rs  schema.rs
api/compliance-attestation-adapter/src/service/: attestation_hash_service.rs  confidential_http_service.rs  encryption_service.rs  idempotency_service.rs  metrics_service.rs  mod.rs  policy_eval_service.rs  sanctions_service.rs  signature_service.rs
api/compliance-attestation-adapter/tests/: intake_normalization.rs
api/encrypted-intent-gateway/: .env.example  Cargo.toml  structure.md
api/encrypted-intent-gateway/src/: app.rs  lib.rs  main.rs
api/encrypted-intent-gateway/src/config/: db.rs  environment.rs  mod.rs
api/encrypted-intent-gateway/src/infra/: mod.rs
api/encrypted-intent-gateway/src/module/: mod.rs
api/encrypted-intent-gateway/src/module/encrypted_intent/: controller.rs  crud.rs  error.rs  model.rs  route.rs  schema.rs
api/encrypted-intent-gateway/src/service/: commitment_service.rs  decrypt_service.rs  metrics_service.rs  mod.rs  replay_service.rs  signature_service.rs  workflow_service.rs
api/encrypted-intent-gateway/tests/: bad_signature.rs  expired_timestamp.rs  replay_nonce_hash.rs
api/encrypted-intent-gateway/tests/common/: mod.rs
api/policy-snapshot/: .env.example  Cargo.toml  structure.md
api/policy-snapshot/src/: app.rs  main.rs
api/policy-snapshot/src/config/: environment.rs
api/policy-snapshot/src/infra/: mod.rs
api/policy-snapshot/src/module/: mod.rs
api/policy-snapshot/src/module/policy_snapshot/: controller.rs  crud.rs  error.rs  model.rs  route.rs  schema.rs
api/policy-snapshot/src/service/: canonical_json_service.rs  hash_service.rs  internal_auth_service.rs  mod.rs  rules_validation_service.rs
api/policy-snapshot/tests/: policy_snapshot_features.rs
api/proof-job-coordinator/: .env.example  Cargo.toml  struct.md
api/proof-job-coordinator/src/: app.rs  main.rs
api/proof-job-coordinator/src/config/: db.rs  environment.rs
api/proof-job-coordinator/src/infra/: mod.rs
api/proof-job-coordinator/src/module/: mod.rs
api/proof-job-coordinator/src/module/proof_job/: controller.rs  crud.rs  error.rs  model.rs  route.rs  schema.rs
api/proof-job-coordinator/src/service/: binding_codec_service.rs  internal_auth_service.rs  metrics_service.rs  mod.rs  prover_service.rs  publish_service.rs  queue_service.rs  replay_service.rs  signal_binding_service.rs  validation_service.rs  wallet_auth_service.rs  workflow_service.rs
api/proof-job-coordinator/tests/: proof_job_intake.rs  signal_binding.rs
api/scripts/: check-api-connectivity.sh
contracts/: .env.example  README.md  design.md  flow.md  foundry.toml
contracts/script/: DeployZKClear.s.sol
contracts/test/: AccessController.t.sol  PolicyManager.t.sol  ReplayProtection.t.sol  SettlementRegistry.t.sol  SettlementRegistryGroth16E2E.t.sol  SignalBinding.t.sol  Verifier.t.sol
creworkflow/: .gitignore  Cargo.toml  README.md  creflow.md
creworkflow/orchestrator/: Cargo.toml
creworkflow/orchestrator/src/: main.rs
creworkflow/publish-receipt/: Cargo.toml  README.md
creworkflow/publish-receipt/src/: chain.rs  errors.rs  handler.rs  lib.rs  main.rs  models.rs
creworkflow/publish-receipt/tests/: publish_receipt_integration.rs
creworkflow/scripts/: demo.sh  (+2 more)
frontendchainlink/: flow.md  package-lock.json  package.json
zk/: Cargo.toml  README.md  jjj.md  package-lock.json  package.json
(+128 files in other folders)
