[package]
name = "compliance-attestation-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
csv = "1"
http = "1"
tower = "0.5"
mongodb = "3.1"
redis = { version = "0.27", features = ["tokio-comp"] }
hmac = "0.12"
base64 = "0.22"
aes-gcm = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
