[package]
name = "encrypted-intent-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2"
once_cell = "1.20"
base64 = "0.22"
aes-gcm = "0.10"
mongodb = "3.1"
redis = { version = "0.27", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
http = "1"
tower = "0.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
