[package]
name = "policy-snapshot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hmac = "0.12"
mongodb = "3.1"
redis = { version = "0.27", features = ["tokio-comp"] }

[dev-dependencies]
http = "1"
tower = "0.5"
