[package]
name = "proof-job-coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "process", "fs", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
redis = { version = "0.27", features = ["tokio-comp"] }
publish-receipt = { path = "../../creworkflow/publish-receipt" }
ethers = { version = "2", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
http = "1"
tower = { version = "0.5", features = ["util"] }
