[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
intent-intake = { path = "../intent-intake" }
confidential-match = { path = "../confidential-match" }
proof-generate = { path = "../proof-generate" }
settle-private = { path = "../settle-private" }
publish-receipt = { path = "../publish-receipt" }
