[package]
name = "publish-receipt"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
ethers = { version = "2", default-features = false, features = ["abigen", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
